fix for modules

--- a/collections/ansible_collections/vmware/nsx_alb/roles/aviconfig/tasks/systemconfiguration_delete.yml
+++ b/collections/ansible_collections/vmware/nsx_alb/roles/aviconfig/tasks/systemconfiguration_delete.yml
@@ -9,7 +9,8 @@
     tenant: "{{ item.tenant | default(omit) }}"
     api_version: "{{ api_version | default(omit) }}"
     avi_credentials: "{{ avi_credentials | default(omit) }}"
-    api_context: "{{ avi_api_context | default(omit) }}"    state: present
+    api_context: "{{ avi_api_context | default(omit) }}"
+    state: present
     avi_api_update_method: patch
     avi_api_patch_op: delete
     ntp_configuration: {}
