--- a/collections/ansible_collections/galaxy.yml
+++ b/collections/ansible_collections/galaxy.yml
@@ -7,10 +7,17 @@ authors:
 - Sandeep Bandi <sabandi@vmware.com>
 - Amol Shinde <samol@vmware.com>
 description: VMware Advanced Load Balancer (formerly Avi) Ansible Collection
-license:
-- GPL-2.0-or-later
 license_file: 'LICENSE'
-tags: [avi, controller, avicontroller, avisdk, avinetworks, networks, load, balancer, sdk]
-repository: https://github.com/ansible-collections/vmware.nsx_alb
-issues: https://github.com/ansible-collections/vmware.nsx_alb/issue
+tags:
+  - avi
+  - controller
+  - avicontroller
+  - avisdk
+  - avinetworks
+  - networks
+  - load
+  - balancer
+  - sdk
+repository: https://github.com/avinetworks/ansible-collection-alb
+issues: https://github.com/avinetworks/ansible-collection-alb/issue
 
