--- a/collections/ansible_collections/roles/aviconfig/tasks/cloud.yml
+++ b/collections/ansible_collections/roles/aviconfig/tasks/cloud.yml
@@ -3,7 +3,7 @@
 ---
 - name: Avi Cloud | Setup Cloud
   no_log: "{{ avi_role_config_log_mode | default(False)}}"
-  vmware.nsx_alb.avi_cloud:
+  vmware.alb.avi_cloud:
     controller: "{{ avi_controller | default(omit)}}"
     username: "{{ avi_username | default(omit) }}"
     password: "{{ avi_password | default(omit) }}"
@@ -57,7 +57,7 @@
   with_items: "{{ avi_role_cfg.cloud | default([]) }}"
 
 - name: Fetch cloud status
-  vmware.nsx_alb.avi_api_session:
+  vmware.alb.avi_api_session:
     controller: "{{ avi_controller | default(omit)}}"
     username: "{{ avi_username  | default(omit)}}"
     password: "{{ avi_password  | default(omit)}}"
@@ -89,7 +89,7 @@
 
 - name: Avi Cloud | Setup Cloud
   no_log: "{{ avi_role_config_log_mode | default(False)}}"
-  vmware.nsx_alb.avi_cloud:
+  vmware.alb.avi_cloud:
     controller: "{{ avi_controller | default(omit)}}"
     username: "{{ avi_username  | default(omit)}}"
     password: "{{ avi_password  | default(omit)}}"
